Fixed the uneven navbar problem
Set html height to 100% to fix the uneven navbar problem

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body{
 font-family: 'Raleway', sans-serif;
+height: 100%
 
 }
+
+ html {
+  height: 100%;
+}
+
 .content {
 
 padding-top: -1000px;
